fix: overflowing footer text

--- a/src/components/global/footer/footer.scss
+++ b/src/components/global/footer/footer.scss
@@ -1,5 +1,5 @@
 .footer {
-    @apply py-16 px-6 text-center bg-brand-green-dark text-white;
+    @apply py-16 px-6 text-center bg-brand-green-dark text-white overflow-hidden;
 
     &__inner {
         @apply mx-auto max-w-screen-xl;
@@ -33,7 +33,7 @@
         }
 
         a {
-            @apply block no-underline text-white;
+            @apply block no-underline text-white truncate;
 
             &:hover,
             &:focus,
